refactor: update application head description meta content

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#fff" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Pizzeria | Order Pizzas Online"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
